load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
COPTS = [
        "-std=c++11",
        "-DGFLAGS_NS=google",
        "-DUNIT_TEST",
        "-Wall",
        "-g",
        "-ggdb",
        "-fno-omit-frame-pointer",
        "-Dprivate=public",
        "-Dprotected=public",
        "-include test/sstream_workaround.h",
]
cc_library(
    name = "braft_test_library",
    srcs = glob(["test_util.cpp"]),
    hdrs = glob(["*.h"]),
    copts = COPTS,
    deps = [
         "//:braft",
    ],
)
cc_test(
    name = "test_ballot_box",
    srcs = ["test_ballot_box.cpp"],
  
    deps = [
        "//:braft",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_ballot",
    srcs = ["test_ballot.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_checksum",
    srcs = ["test_checksum.cpp"],
    deps = [
        "//:braft",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_cli",
    srcs = ["test_cli.cpp"],
    copts = COPTS,
    deps = [
        "@com_github_gflags_gflags//:gflags",
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_configuration",
    srcs = ["test_configuration.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_file_service",
    srcs = ["test_file_service.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_file_system_adaptor",
    srcs = ["test_file_system_adaptor.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_fsm_caller",
    srcs = ["test_fsm_caller.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_fsync",
    srcs = ["test_fsync.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_leader_lease",
    srcs = ["test_leader_lease.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_log_entry",
    srcs = ["test_log_entry.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_log_manager",
    srcs = ["test_log_manager.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_log",
    srcs = ["test_log.cpp"],
     copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_memory_storage",
    srcs = ["test_memory_storage.cpp"],
     copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_meta",
    srcs = ["test_configuration.cpp"],
     copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_node",
    srcs = ["test_node.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_protobuf_file",
    srcs = ["test_protobuf_file.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_repeated_timer_task",
    srcs = ["test_repeated_timer_task.cpp"],
   copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_snapshot_executor",
    srcs = ["test_snapshot_executor.cpp"],
   copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_snapshot",
    srcs = ["test_snapshot.cpp"],
   copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)
cc_test(
    name = "test_storage",
    srcs = ["test_storage.cpp"],
   copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_throttle",
    srcs = ["test_throttle.cpp"],
    copts = COPTS,
    deps = [
        "//:braft",
        "//test:braft_test_library",
        "@com_google_googletest//:gtest_main",
    ],
)